update-manager (1:0.80) gutsy; urgency=low

  * DistUpgrade/DistUpgradeControler.py:
    - do not log apts debug output to the user in server
      upgrade mode
  * DistUpgrade/DistUpgradeCache.py,DistUpgradeControler.py:  
    - detect and workaround upgrade issues with envy
  * update-manager:
    - show version with --version (LP: #137353)
  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix crash with invalid utf-8 in polish locale (LP: #145351)

 --

update-manager (1:0.79) gutsy; urgency=low

  * DistUpgrade/ReleaseAnnouncement:
    - update for the beta release
  * DistUpgrade/DistUpgradeControler.py:
    - fix typo in pre-requists (thanks to Stuart Bishop)
  * debian/control:
    - tighten update-manager depend on update-manager-core
  * UpdateManager/Core/DistUpgradeFetcherCore.py:
    - move country_mirror code into Core (LP: #145116)
  * UpdateManager/Core/MetaReleaseCore.py, 
    tests/interactive_fetch-release_upgrader.py:
    - fix test failure

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 26 Sep 2007 17:50:16 +0200

update-manager (1:0.78) gutsy; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - Fix button in conffile dialogue

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 25 Sep 2007 23:09:35 +0100

update-manager (1:0.77) gutsy; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix crash in conffile dialogue setup

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 25 Sep 2007 14:22:55 +0100

update-manager (1:0.76) gutsy; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeCache.py:
    - ensure that the util-linux -> nfs-common transition
      happens (LP: #141559)

  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgradeViewKDE.py:
    - copy Xauthority file if necessary

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 24 Sep 2007 19:49:17 +0200

update-manager (1:0.75) gutsy; urgency=low

  * DistUpgrade/DistUpgradeViewGtk.py:
    - work around broken vte forkpty() env add
  * DistUpgrade/DistUpgradeControler.py: